<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSelectCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_city"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:backgroundTint="@color/purple"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/textCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textDistrict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/FO"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textRegion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Region"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textPostalCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PI"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textTimezone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Time"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textPopulation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/PN"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"/>

    <TextView
        android:id="@+id/textFounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Made"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonShowOnMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Show"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:backgroundTint="@color/purple"/>

</LinearLayout>